objects/APTS_DM_Object_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object_Field__c</fullName>
        <label>Operational Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object_Name__c</fullName>
        <label>Operational Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Staging_Object_Field__c</fullName>
        <label>Staging Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Staging_Object_Name__c</fullName>
        <label>Staging Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DM Object Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Operational_Object_Name__c</columns>
        <columns>APTS_Staging_Object_Name__c</columns>
        <columns>APTS_Operational_Object_Field__c</columns>
        <columns>APTS_Staging_Object_Field__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OFM-{0000000}</displayFormat>
        <label>DM Object Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DM Object Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>